[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Maps/Castle/Traps/FloorSpikes.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Maps/Castle/Traps/Assets/floor_spikes_anim_f0.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Maps/Castle/Traps/Assets/floor_spikes_anim_f2.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Maps/Castle/Traps/Assets/floor_spikes_anim_f1.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Maps/Castle/Traps/Assets/floor_spikes_anim_f3.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": false,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31.9946, 31.989 )

[node name="FloorSpikes" type="Area2D"]
collision_layer = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="SpikesAnimation" type="AnimatedSprite" parent="."]
position = Vector2( 32.0851, 32.1734 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 32.0851, 32.1734 )
shape = SubResource( 2 )

[node name="SpikesCooldown" type="Timer" parent="."]
wait_time = 1.3
one_shot = true

[node name="SpawnActivation" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DamageTiming" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Trap_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_FloorSpikes_body_exited"]
[connection signal="animation_finished" from="SpikesAnimation" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="SpikesCooldown" to="." method="_on_SpikesCooldown_timeout"]
[connection signal="timeout" from="SpawnActivation" to="." method="_on_SpawnActivation_timeout"]
[connection signal="timeout" from="DamageTiming" to="." method="_on_DamageTiming_timeout"]
